--- a/CSS/estilos.css
+++ b/CSS/estilos.css
@@ -42,9 +42,6 @@ body{
 
 .container-header{
     background-color:#c92c2c
-    text
-    
-
 }
 .navbar{
     background-color:#c92c2c
@@ -89,17 +86,7 @@ footer{
     height: 8vh;
 }
     
-@media (max-width: 768px)
-{
-li{
-    margin-left: 0;
-    margin-bottom: 1vh;
-}
-      
-.sozial{
-    margin-bottom: 1vh;
-}
-    }
+
 
     /*discografia*/
 
@@ -252,6 +239,12 @@ h1{
 
 /* CARD */
 
+@media (min-width: 1200px){
+    .tarjeta-img{
+        width: 100%;
+        display: grid;
+    }
+}
 
 .contenedor2 {
     width: 500px;
@@ -301,14 +294,21 @@ h1{
 }
 
 /*landing page*/
-/* NOSOTROS */
+
 .nosotros {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-bottom: 40px;
 }
-
+@media (min-width: 576px){
+    .container{
+        width: 80%;
+    }
+    .cartas-central{
+        gap: 15em
+    }
+}
 
 .nosotros-body {
     background-color: #c92c2c;
@@ -316,8 +316,6 @@ h1{
     text-align: center;
     color: #131618;
     border-radius: 0.5em;
-    
-
 }
 
 .nosotros-body h2 {
@@ -370,7 +368,7 @@ h1{
 
 }
 
-.cartas-body h4 {
+.cartas-body h5 {
     padding: 5px;
     font-size: 2rem;
     margin: .5em 0;
